<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="cream">Whipped Cream</string>
    <string name="choc">Chocolate</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity</string>
    <string name="initial_order_value">2</string>
    <string name="hint_name">Name</string>

    <!--Name for the order summary-->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="addWhippedCream" example="true">%s</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="addChocolate" example="true">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="\u20a650">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_currency">\u20a6</string>
</resources>
