<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        tools:context="com.example.android.justjava.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                style="@style/text"
                android:id="@+id/name_field"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp" />

            <TextView
                style="@style/HeaderTextStyle"
                android:text="@string/toppings"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"/>

            <CheckBox
                style="@style/text"
                android:id="@+id/whipped_cream_checkbox"
                android:paddingLeft="24dp"
                android:text="@string/cream"
                android:background="#773333"
                android:layout_marginRight="16dp" />

            <CheckBox
                style="@style/text"
                android:id="@+id/chocolate_checkbox"
                android:paddingLeft="24dp"
                android:text="@string/choc"
                android:background="#773333"
                android:layout_marginRight="16dp"/>

            <TextView
                style="@style/HeaderTextStyle"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/quantity"
                android:id="@+id/quantity"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/quantity_picker">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="8dp"
                    android:onClick="decrement"
                    android:text="-"
                    android:textSize="16sp"/>

                <TextView
                    style="@style/text"
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:text="@string/initial_order_value"
                    android:textStyle="bold"/>

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:onClick="increment"
                    android:text="+"
                    android:textSize="16sp"/>
            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:id="@+id/order"
                android:textSize="16sp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>